--- a/ios/Podfile
+++ b/ios/Podfile
@@ -78,6 +78,8 @@ target 'StartRN' do
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
 
+  pod 'react-native-webview', :path => '../node_modules/react-native-webview'
+
   target 'StartRNTests' do
     inherit! :complete
     # Pods for testing
