--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
+    "react-native-webview": "^10.3.2",
+    "react-native-youtube": "^2.0.1",
     "react-navigation": "^4.4.0",
     "react-navigation-drawer": "^2.5.0",
     "react-navigation-stack": "^2.8.2"
